fixed mobile code wrapping

--- a/content/static/custom.css
+++ b/content/static/custom.css
@@ -1,6 +1,9 @@
 html {
     font-size: 95% !important;
 }
+main article :not(pre) > code {
+    white-space : pre-wrap !important;
+  }
 
 /* figcaption {
     font-size: 60% !important;
